traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:4: error: value && is not a member of Int
  while(x=getMondeLargeur() && y=getMondeHauteur()){
                            ^TraversalByColumn:4: error: type mismatch;
 found   : Unit
 required: Boolean
  while(x=getMondeLargeur() && y=getMondeHauteur()){
         ^